Got rid of red/blue backgrounds

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <main>
         
-        <section class="mainContainer">
+        <div class="mainContainer">
             <article class="bio">
                 <h3>Representative for Tennessee's 5th Congressional District<br>Congressman<br>Democrat</h3>
             </article>
@@ -29,7 +29,7 @@
                     <li>Committee on Oversight and Reform</li>
                     <li>Committee on the Budget</li>
                 </ol>
-            </article>
+            </div>
 
         </section>
 
