Added dark colors

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,26 +15,38 @@
     </header>
 
     <main>
-        
+
         <div class="mainContainer">
-            <article class="bio">
-                <h3>Representative for Tennessee's 5th Congressional District<br>Congressman<br>Democrat</h3>
-            </article>
-            <article class="JimPic">
+
+            <section class="bio">
+                <h3>Representative for Tennessee's 5th Congressional District</h3>
+                <p>US Congressman</p>
+                <p>Democrat</p>
+            </section>
+
+            <section class="JimPic">
                 <img src="/images/jimcoop2.png" alt="Jim Cooper">
-            </article>
-            <article class="committee">
-                <h3>Jim's recognition as a leader on complex policy issues prompted Democratic leadership <br>to assign him to three of the most significant committees in the House:</h3>
+            </section>
+
+            <section class="committee">
+                <h3>Jim's recognition as a leader on complex policy issues prompted Democratic leadership <br>to assign
+                    him to three of the most significant committees in the House:</h3>
                 <ol>
                     <li>Committee on Armed Services</li>
                     <li>Committee on Oversight and Reform</li>
                     <li>Committee on the Budget</li>
                 </ol>
-            </div>
+            </section>
 
-        </section>
+        </div>
 
     </main>
+
+    <footer>
+        <div class="foot">
+            <p>List of legislation enacted by Jim Cooper: <a href="http://www.JimCooperLegislationEnacted.com">www.Legislation Enacted-JC.com</a></p>
+        </div>
+    </footer>
 
 </body>
 
