added actual links in footer

--- a/index.html
+++ b/index.html
@@ -5,46 +5,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Congressional Representative</title>
+    <title>Jim Cooper - Congress Rep</title>
     <link rel="stylesheet" href="/styles/main.css">
 </head>
 
-<body>
-    <header>
+<body>  <!--Body section that contains header, main, and footer.-->
+
+    <header> <!--Header-->
         <h1>Jim Cooper</h1>
     </header>
 
-    <main>
+    <main> <!--Main section that contains the 1) Bio and Image, and 2) Committee List-->
 
-        <div class="mainContainer">
+        <section class="bio"> <!--section containing bio-->
+            <h3>Representative for Tennessee's 5th Congressional District</h3>
+            <p>US Congressman</p>
+            <p>Democrat</p>
+            <img src="/images/jimcoop2.png" alt="Jim Cooper">
+        </section>
 
-            <section class="bio">
-                <h3>Representative for Tennessee's 5th Congressional District</h3>
-                <p>US Congressman</p>
-                <p>Democrat</p>
-            </section>
-
-            <section class="JimPic">
-                <img src="/images/jimcoop2.png" alt="Jim Cooper">
-            </section>
-
-            <section class="committee">
-                <h3>Jim's recognition as a leader on complex policy issues prompted Democratic leadership <br>to assign
-                    him to three of the most significant committees in the House:</h3>
-                <ol>
-                    <li>Committee on Armed Services</li>
-                    <li>Committee on Oversight and Reform</li>
-                    <li>Committee on the Budget</li>
-                </ol>
-            </section>
-
-        </div>
+        <section class="committee"> <!--section containing the list of committees-->
+            <h3>Jim's recognition as a leader on complex policy issues prompted Democratic<br>leadership to assign him to three of the most significant committees in the House:</h3>
+            <ul>
+                <li>Committee on Armed Services</li>
+                <li>Committee on Oversight and Reform</li>
+                <li>Committee on the Budget</li>
+            </ul>
+        </section>
 
     </main>
 
-    <footer>
+    <footer>  <!--Footer containing the links to the legislation enacted-->
         <div class="foot">
-            <p>List of legislation enacted by Jim Cooper: <a href="http://www.JimCooperLegislationEnacted.com">www.Legislation Enacted-JC.com</a></p>
+            <h3> Legislation Enacted: </h3>
+            <a href="https://www.congress.gov/bill/117th-congress/house-bill/6381?s=1&r=4">H.R.6381 - CREATE Act of 2022</a>
+            <br>
+            <br>
+            <a href="https://www.congress.gov/bill/117th-congress/house-bill/6497?s=1&r=2">H.R.6497 - Federal Information Security Modernization Act</a>
+            <br>
+            <br>
+            <a href="https://www.congress.gov/bill/117th-congress/house-bill/6385?s=1&r=3">H.R.6385 - Masks for All Act of 2022</a>
+            <br>
+            <br>
         </div>
     </footer>
 
